<resources>
    <string name="app_name">Display Album</string>

    <string name="user_info">User Info</string>
    <string name="album_details">Album Details</string>
    <string name="image_display">Image Display</string>

    <!--User Info Page Strings-->
    <string name="title_user_info">User Info</string>
    <string name="title_album_info">Album ID: %1$s</string>

    <string name="id">ID: %1$s</string>
    <string name="name">Name: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="phone">Phone: %1$s</string>

    <string name="album_image_text">Image text</string>

    <string name="album_id_text">Album ID : %1$s</string>
    <string name="photos_id_text">Photo ID : %1$s</string>

    <!--Error message-->
    <string name="no_internet_connection">Sorry!. No internet connection</string>

</resources>
