<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/user_info_fragment">

    <fragment
        android:id="@+id/user_info_fragment"
        android:name="com.trackthebird.displayalbum.ui.UserInfoFragment"
        android:label="@string/user_info"
        tools:layout="@layout/user_info_fragment" >
        <action
            android:id="@+id/next_action"
            app:destination="@+id/album_details_fragment">
        </action>
    </fragment>

    <fragment
        android:id="@+id/album_details_fragment"
        android:name="com.trackthebird.displayalbum.ui.AlbumDetailsFragment"
        android:label="@string/album_details"
        tools:layout="@layout/album_details_fragment" >
        <action
            android:id="@+id/next_action"
            app:destination="@+id/image_display_fragment">
        </action>
    </fragment>

    <fragment
        android:id="@+id/image_display_fragment"
        android:name="com.trackthebird.displayalbum.ui.ImageDisplayFragment"
        android:label="@string/image_display"
        tools:layout="@layout/image_display_fragment" />

</navigation>