<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <androidx.cardview.widget.CardView
        android:id="@+id/id_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/id_textview_cell_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle1"
                android:text="@string/id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/id_textview_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle2"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_textview_cell_title"/>

            <TextView
                android:id="@+id/id_textview_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle2"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_textview_name"/>

            <TextView
                android:id="@+id/id_textview_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle2"
                android:text="@string/phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_textview_email"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/clearColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_textview_phone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>


